# congenial-sniffle

./: .gitignore  CLAUDE.md  README.md  notes.txt  pyproject.toml  script.txt
src/: demo_scope.py
src/agents/: pipeline.py  retriever.py
src/analysis/: __init__.py  agent.py  db.py  relevance.py
src/councillor/: app.py  notify.py
src/dashboard/: app.py  components.py  constants.py  mock_data.py  simulation.py  state.py
src/models/: analysis.py  documents.py
src/parser/: summariser.py
src/retrieval/: __init__.py  db.py
src/voter/: app.py  db.py  presentation.py  seed.py  seed_demo_run.py  seed_populated_votes.py
tests/: conftest.py  test_analysis_agent.py  test_analysis_db.py  test_dashboard_components.py  test_dashboard_mock_data.py  test_dashboard_simulation.py  test_dashboard_state.py  test_demo_scope.py  test_live.py  test_models.py  test_pipeline.py  test_retrieval_db.py  test_retriever.py  test_summariser.py  test_voter_db.py  test_voter_presentation.py
